kubernetes-files/counter-v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-v2
  labels:
    app: counter-v2
    version: v2   
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-v2
  template:
    metadata:
      labels:
        app: counter-v2
        version: v2
    spec:
      containers:
      - name: counter-v2
        image: kubernetes-service-counter-v2   
        imagePullPolicy: IfNotPresent         # O Always si deseas forzar la descarga
        ports:
        - containerPort: 3002               # El puerto que expone la app
