kubernetes-files/clock-v1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hour-v1-service
  labels:
    app:  hour-v1
    version: v1   
spec:
  selector:
    app: hour-v1
    version: v1   
  ports:
  # - name: http-hora-a  
    - protocol: TCP
      port: 80         # Puerto interno del Service
      targetPort: 3003 # Redirige al puerto 3003 del contenedor
  # type: ClusterIP
