kubernetes-files/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    app: frontend
    version: v1
spec:
  selector:
    app: frontend
    version: v1
  ports:
    # - name: http-frontend
    - protocol: TCP
      port: 80
      targetPort: 80
