kubernetes-files/greeting-v2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeting-v2-service
  labels:
    app:  greeting-v2
    version: v2
spec:
  selector:
    app: greeting-v2
    version: v2
  ports:
  # - name: http-hora-a  
    - protocol: TCP
      port: 80         # Puerto interno del Service
      targetPort: 3001 # Redirige al puerto 3003 del contenedor
  # type: ClusterIP
