kubernetes-files/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-v1
  labels:
    app: auth-service
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth-service
      version: v1
  template:
    metadata:
      labels:
        app: auth-service
        version: v1
    spec:
      containers:
      - name: auth-v1
        image: kubernetes-service-auth
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3005
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: auth-destrule
spec:
  host: auth-service
  subsets:
    - name: v1
      labels:
        version: v1
